unpackaged/objects/Service_Request__c.object
<CustomObject>
    <fields>
        <fullName>Appliocation_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONNECT</fullName>
                </value>
                <value>
                    <fullName>CPC Web App</fullName>
                </value>
                <value>
                    <fullName>Innovation Center</fullName>
                </value>
                <value>
                    <fullName>MDPCP</fullName>
                </value>
                <value>
                    <fullName>Reusable Framework</fullName>
                </value>
                <value>
                    <fullName>CPC BIR</fullName>
                </value>
                <value>
                    <fullName>IC BIR</fullName>
                </value>
                <value>
                    <fullName>QMAT</fullName>
                </value>
                <value>
                    <fullName>QMAT Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Feature__c</fullName>
        <label>SR Feature</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Appliocation_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communities</fullName>
                </value>
                <value>
                    <fullName>Educational Materials &amp; Reports</fullName>
                </value>
                <value>
                    <fullName>User Accounts</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Files</fullName>
                </value>
                <value>
                    <fullName>Report(s)</fullName>
                </value>
                <value>
                    <fullName>Submission Period(s)</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Production Support</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Type__c</fullName>
        <label>SR Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SR_Feature__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>• Archive a community</fullName>
                </value>
                <value>
                    <fullName>• Create a community</fullName>
                </value>
                <value>
                    <fullName>• Create/configure data report</fullName>
                </value>
                <value>
                    <fullName>• Educate users, update materials</fullName>
                </value>
                <value>
                    <fullName>• Create/configure user accounts</fullName>
                </value>
                <value>
                    <fullName>• Deactivate user accounts</fullName>
                </value>
                <value>
                    <fullName>• Upload/configure content</fullName>
                </value>
                <value>
                    <fullName>• Configure system settings</fullName>
                </value>
                <value>
                    <fullName>• Research</fullName>
                </value>
                <value>
                    <fullName>• Troubleshoot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>